2002-07-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/beam.cc (set_stem_lengths): extend stems for gapped tremolo
	beams.
	(connect_beams): chop off beaming outside the beam. Fixes problem
	with tremolo beams.

	* lily/score-engraver.cc (initialize): error if feta20.afm

2002-07-19  Han-Wen  <hanwen@cs.uu.nl>

	* scm/engraver-documentation-lib.scm
	(document-property-operation): add properties to context
	documentation.

	* scm/documentation-lib.scm (pad-string-to): align info menus.

2002-07-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* debian/GNUmakefile: Remove lilypond.links.
	
	* debian/: Debian patch (Anthony Fok).
	
	* debian/lilypond.links: Remove, as per Anthony's request.

	* aclocal.m4: Regenerate.
	
	* stepmake/aclocal.m4: Add --with-kpathsea-include,
	--with-kpathsea-lib options.

	* scripts/mup2ly.py: Cut-n-paste include missing lilylib.

	* stepmake/stepmake/compile-vars.make: 
	* stepmake/stepmake/executable-rules.make: 
	* stepmake/stepmake/python-module-rules.make:
	* stepmake/stepmake/shared-library-rules.make: Use ALL_LDFLAGS, to
	guard agains user override of LDFLAGS.

	* Documentation/user/refman.itely: Compile fix for \mark #'(music ...).

	* Documentation/user/internals.itely: Use ly-set-mus-property!.

	* cygwin/mknetrel: New file.

	* cygwin: New directory.  Moved Cygwin stuff from
	Documentation/windows.
	
	* Documentation/windows/fix-suffixes.sh:
	* buildscripts/walk.sh: Junk.

	* aclocal.m4: Regenerate.

	* buildscripts/walk.sh: Remove.

	* stepmake/stepmake/topdocs-targets.make: 
	* stepmake/stepmake/help2man-rules.make: 
	* stepmake/stepmake/generic-vars.make: 
	* stepmake/make/stepmake.make: 
	* Documentation/user/GNUmakefile: 
	* make/stepmake.make: 
	* make/lilypond-vars.make: 
	* GNUmakefile.in: 
	* stepmake/aclocal.m4: Remove builddir cruftyness.
	
	* stepmake/stepmake/c++-rules.make: Use ALL_CXXFLAGS, to guard
	agains user override of CXXFLAGS.
	
	* stepmake/stepmake/c++-vars.make (ALL_CXXFLAGS): Include CXXFLAGS.
	