@@ -1,6 +1,7 @@
+@comment @c -*-texinfo-*-
 
 @node Preface
-@chapter Preface
+@unnumbered Preface
 
 
 It must have been during a rehearsal of the EJE (Eindhoven Youth
